@@ -1,2 +1,2 @@
 For soyjak.blog css, simply add your css file with the name "name_main.css" then to add a stylesheet for the options page, create it under the name "name_options.css"
-For example, "orange_main.css" and "orange_options.css"
+For example, "orange_main.css" and "orange_options.css". Add any images you need to use inside of the images folder and link the content to the github repo to use the image.
